# ROS2-drone-sim

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  justfile
config/: bridge.yaml
src/: DroneActor.h  DroneKeyboardTeleop.cpp  MainWindow.cpp  MainWindow.h  RosWorker.cpp  RosWorker.h  main.cpp
worlds/: multi_drone.sdf
